--- a/dokumentation/dokumentation-lpic.adoc
+++ b/dokumentation/dokumentation-lpic.adoc
@@ -287,7 +287,7 @@ Auf der Shell kann immer nur ein einzelner Prozess im Vordergrund ausgeführt we
 * `killall`: wie oben, erwartet aber den exakten Prozessnamen
 * `pgrep`: PID laufender Prozesse ermitteln, ähnlich wie `ps -ef | grep`
 * `nohup`: aufgerufener Prozess wird von der aufrufenden Shell gelöst, so dass dieser Prozess auch weiterläuft, wenn die aufrufenden Shell beendet wird
-* `nohup ping 1.1.1.1 > ping.out`: Ausgabe von `ping` in Datei `ping.out` umleiten
+* `nohup ping 1.1.1.1 &`: Ausgabe von `ping` in Datei `nohup.out` umleiten und von der aufrufenden Shell lösen
 * `tail -f`: fortlaufende Beobachtung einer Datei (neue Einträge werden automatisch angezeigt)
 * `top`: Anzeige laufender Prozesse, ähnlich zum Taskmanager unter Windows, Prozesse können auch interaktiv beeinflusst werden
 * `htop`: komfortablere Variante von `top`
