--- a/dokumentation/dokumentation-lpic.adoc
+++ b/dokumentation/dokumentation-lpic.adoc
@@ -300,13 +300,146 @@ Auf der Shell kann immer nur ein einzelner Prozess im Vordergrund ausgeführt we
 * Standardpriorität ist 120
 * je geringer die Priorität ist, desto mehr CPU Leistung bekommt ein Prozess
 * `ps` zeigt Prioritäten von -40 bis 99, wir addieren also immer 40 dazu
-* `top` zeigt Prioritäten von -100 bis 39, wir addieren alos immer 100 dazu
+* `top` zeigt Prioritäten von -100 bis 39, wir addieren also immer 100 dazu
 * `nice` kann einem Kommando beim Start eine geringere/höhere Ausführungspriorität zuweisen
   * Werte von -20 bis -1 koennen nur von `root` zugewiesen werden
   * Werte von 0 bis 19 von normalen Benutzern
   * ein hoeherer `nice` - Wert bedeute, dass der Prozess eine *geringere* Ausführungspriorität zugewiesen bekommt (Prozess ist _nicer/netter_ zu anderen Prozessen)
 * `renice` kann einem Kommando im laufenden Betrieb eine andere Priorität zuweisen
 * nur `root` kann `renice` ausführen
+
+== Benutzer und Gruppen
+
+Es gibt zwei Arten von Benutzern:
+
+* Systembenutzer/Pseudobenutzer
+* Reale Benutzer
+
+=== Dateien der Benutzerverwaltung
+
+* `/etc/passwd`: Liste aller Benutzer auf dem System, tabellarischer Aufbau, Manpage `man 5 passwd`, von allen lesbar
+* `/etc/shadow`: Passwörter der Benutzer, gesaltet und gehasht, Ablaufdaten der Passwörter
+* `/etc/group`: Liste aller Gruppen und deren Mitglieder
+* `/etc/gshadow`: Passwörter für Gruppen, wird eigentlich nicht verwendet
+
+=== Benutzer anlegen
+
+ useradd karl
+  
+Obiges Kommando erzeugt den Benutzer `karl`, es wird jedoch kein Heimatverzeichnis erstellt und die Shell ist die `/bin/sh`
+
+Mit folgendem Kommando wird der Benutzer `tux` mit eigenem Heimatverzeichnis und darin enthaltener Standarddateien (Kopie von `/etc/skel`) erzeugt, im Kommentarfeld der Name `Tux Tuxedo` und der BASH als Login Shell:
+
+ useradd -m -c 'Tux Tuxedo' -s /bin/bash tux
+
+Anschließend muss mit dem Kommando `passwd tux` noch ein Passwort für `tux` erstellt werden.
+
+Das interaktive Kommando `adduser` unter Debian ist ein Wrapper um `useradd`, welches zusätzlich ein Passswort erstellt.
+
+=== Benutzer ändern
+
+Mit dem Kommando `usermod` können Eigenschaften von Benutzern geändert werden. Die Optionen sind sehr ähnlich zu `useradd`.
+
+=== Gruppen anlegen
+
+Gruppe `gfn` erzeugen:
+
+ groupadd gfn
+
+Benutzer `tux` der Gruppe `gfn` hinzufügen:
+
+ usermod -aG gfn tux
+
+Wichtig ist hier das `-a`, ansonsten werden alle anderen Gruppenzugehörigkeiten von `tux` gelöscht.
+
+Gruppenzugehörigkeiten werden erst aktiv, wenn sich der Benutzer einmal komplett vom System ab- und wieder angemeldet hat.
+
+=== Benutzer wechseln
+
+`su tux`: Wechselt in den Benutzeraccount von `tux`, Umgegung (env, Variablen etc.) werden teilweise neu gesetzt. 
+`su - tux`: wie oben, es werden aber alle Umgebungsvariablen neu gesetzt ("echte" Login Shell)
+`su -l tux`: wie oben
+`su --login tux`: wie oben
+
+== TODO
+
+=== Besitzer ändern
+
+ chown user <datei>
+
+=== Gruppe ändern
+
+ chgrp group <datei>
+
+ chown :group <datei>
+
+=== Besitzer und Gruppe ändern
+
+ chown user:group <datei>
+
+== Dateibereichtungen
+
+
+ r : read 
+ w : write
+ x : execute
+
+
+ User Group Others
+ rw-  r--   r--
+
+
+== Berechtigungen setzen
+
+=== Symbolische Rechtevergabe
+
+ chmod g+w <datei>   # Schreibrecht für Gruppe hinzufügen
+
+ chmod u-w <datei>   # Schreibrecht für User entziehen
+
+ chmod go-rx <datei>   # Schreibrecht und Ausführungsrecht für Others und Gruppe entziehen
+
+ chmod u=rwx <datei>  # alle Rechte für Owner setzen
+
+=== Oktale/Numerische Rechtevergabe
+
+ r : read     4
+ w : write    2
+ x : execute  1
+
+       ugo
+ chmod 220 <datei>  u=w,g=w
+ chmod 620 <datei>  u=rw,g=w
+
+
+ Okt.   Bin.
+
+ 1      001
+ 2      010
+ 4      100 
+
+  7  6  4
+ 111110100
+ rwxrw-r--
+
+=== Standardberechtigungen
+
+* auf Datei: 644
+* auf Verzeichnis: 755
+
+=== Sonderbits
+
+==== SUID Bit 
+
+
+
+==== SGID Bit 
+
+==== Sticky Bit
+
+
+
+
 
 
 
